[tool.poetry]
name = "vaja-iis"
version = "0.1.0"
description = ""
authors = ["ivana.lavric <ivana.lavric@student.um.si>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
scikit-learn = "^1.4.2"
evidently = "^0.4.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
